tests/errors/surf_name_04.experr
name 'secret' is not defined
